...
        />
      )}
      refreshing={isRefreshing}
      onRefresh={handleRefresh}
      ListHeaderComponent={
        <TouchableOpacity
          testID="newPaletteBtn"
          style={styles.button}
          onPress={() => {
            navigation.navigate('AddNewPaletteModal');
          }}
        >
          <Text style={styles.buttonText}>Add a color palette</Text>
...
